--- a/templates/tagger/index.html
+++ b/templates/tagger/index.html
@@ -54,6 +54,8 @@
                             <p align="left" span id="tracklist"></p>
                         </p>
                         <hr>
+                        <div>Contribute to this website <a href='https://github.com/MartinBarker/martinbarker.me'>here</a>.</div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-BZf07TuGqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
             </div>
